<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_rate_add"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_4"
            android:text="@string/custom_rate_summary"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_custom_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:hint="@string/custom_rate_hint_code"
            app:helperText="@string/custom_rate_helper_code"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_custom_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="12"
                tools:text="OMIR" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_custom_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:hint="@string/custom_rate_hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_custom_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                tools:text="Old Mutual Implied" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_custom_rate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:hint="@string/custom_rate_hint_rate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_custom_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                tools:text="42.50" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_custom_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_dialog_cancel" />

            <Button
                android:id="@+id/btn_custom_save"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_8"
                android:text="@string/custom_rate_save" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
