<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.FragmentRates">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sr_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_rates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                tools:listitem="@layout/item_rate" />

            <LinearLayout
                android:id="@+id/layout_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_16"
                android:visibility="gone">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/image_nothing_found"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_16"
                    android:text="@string/empty_rates_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8"
                    android:text="@string/empty_rates_subtitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center"
                    android:textColor="?android:attr/textColorSecondary" />

                <Button
                    android:id="@+id/btn_empty_refresh"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_16"
                    android:text="@string/menu_refresh_all" />

            </LinearLayout>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
